# obsidian-sonar

./: .gitignore  .prettierignore  AGENTS.md  CHANGELOG.md  CLAUDE.md  README.md  data.json  esbuild-plugin-onnx-patch.mjs  esbuild.config.mjs  eslint.config.js  main.ts  manifest.json  obsidian-style-guide.md  package-lock.json  package.json  pyproject.toml  styles.css  tsconfig.json  versions.json  vitest.config.ts
.github/: dependabot.yml
bench/: .gitignore  Dockerfile.elasticsearch  README.md  aggregation-difference.md  benchmark-workflow.md  config.json  data.json  generate.sh  pyproject.toml  run_benchmark.sh  runbechmark.sh
cli/: extraction-latency.ts  fs-utils.ts  index-parallel.ts  index-sequential.ts  ollama-utils.ts  parse-line-chat.ts  sonar.ts  tokenizer.ts
extension-tools/: README.md  get_google_calendar.js  get_tasks.js  searxng_search.js  types.d.ts
notes/: Cross-Encoder Rerank.md  DEVELOPMENT.md
rag-bench/: .gitignore  README.md
retrieval-bench/: README.md  benchmark-workflow.md  data.json  docker-compose.yml
scripts/: emit-worker-inline.mjs  esbuild-worker.mjs  index-parallel.ts  index-sequential.ts  prepare-release.sh  sonar.ts
src/: BM25Search.ts  BM25Store.ts  BM25Tokenizer.ts  BenchmarkRunner.ts  Chat.ts  ChatContextBuilder.ts  ChatManager.ts  ChunkAggregation.ts  Chunker.ts  ConfigManager.ts  CragBenchmarkRunner.ts  Embedder.test.ts  Embedder.ts  EmbeddingDebugger.ts  EmbeddingSearch.ts  EmbeddingStore.ts  GPUProbe.ts  IndexManager.ts  IntlSegmenterTokenizer.ts  LlamaCppChat.ts  LlamaCppClient.ts  LlamaCppEmbedder.test.ts  Logger.ts  (+42 more)
(+72 files in other folders)
