[project]
name = "sonar-bench"
version = "0.1.0"
description = "Retrieval benchmark suite for Sonar (Sonar vs Elasticsearch vs Weaviate)"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "ir-datasets>=0.5.6",
    "rank-bm25>=0.2.2",
    "ir-measures>=0.3.0",
    "tqdm>=4.65.0",
    "elasticsearch>=8.0.0,<9.0.0",
    "weaviate-client>=3.25.0",
    "sentence-transformers>=2.2.0",
    "tinysegmenter>=0.3",
    "datasets>=2.14.0",
]

[project.optional-dependencies]
dev = [
    "ruff>=0.1.0",
]

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[dependency-groups]
dev = [
    "basedpyright>=1.33.0",
]

[tool.setuptools]
py-modules = []

[tool.ruff]
line-length = 88
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I"]
ignore = []

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
line-ending = "auto"

[tool.basedpyright]
include = ["retrieval-bench", "rag-bench"]
typeCheckingMode = "standard"
